<?xml version="1.0"?>
<package>

  <name>aioros_tutorials</name>
  <version>0.0.1</version>
  <description>aioros tutorials</description>

  <author>Markus Grimm</author>
  <maintainer email="grimm.markus@gmail.com">Markus Grimm</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>aioros</run_depend>
  <run_depend>std_msgs</run_depend>

  <export />

</package>
